--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "jshint": "^2.8.0",
     "open": "0.0.5",
     "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-alpha.14",
+    "rxjs": "5.0.0-alpha.14",
     "serve-static": "^1.10.0",
     "systemjs": "^0.19.6",
     "zone.js": "0.5.8"
